added extra info

--- a/YT.ipynb
+++ b/YT.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Downloading Videos with Python\n",
+    "\n",
+    "We need to first install the library we need, in this mini project we only need PyTube.\n",
+    "From PyTube we import YouTube."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,34 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url=\"https://www.youtube.com/watch?v=X3paOmcrTjQ\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yt =YouTube(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video = yt.streams.first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -47,28 +30,30 @@
        "'C:\\\\PyYT\\\\Data Science In 5 Minutes  Data Science For Beginners  What Is Data Science  Simplilearn.mp4'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "video.download()"
+    "url = 'https://www.youtube.com/watch?v=X3paOmcrTjQ&t=1s' # url of the video\n",
+    "yt =YouTube(url) # Load url in function Youtube\n",
+    "\n",
+    "video = yt.streams.first() # or video = youtube.streams.get_highest_resolution()\n",
+    "video.download() # download the video"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Additional Information:\n",
+    "\n",
+    "###### You can get information of the video you chose:\n",
+    " - video.title # Title\n",
+    " - video.video_id # Id\n",
+    " - video.age_restricted # Age"
+   ]
   }
  ],
  "metadata": {
